--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p>With echo
-<p>this line was done for first change and comand git pull</p>
+<p>this line was done for first change and comand git push</p>
+<p>the next line for pull</p>
